<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/progressbar_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Loading Applications..." />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/programs_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/programs_btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/programs_btn_share" />

        <Button
            android:id="@+id/programs_btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/programs_btn_share"
            android:text="@string/programs_btn_settings" />

        <Button
            android:id="@+id/programs_btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/programs_btn_settings"
            android:text="@string/programs_btn_about" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/programs_ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/programs_btn_layout"
        android:orientation="vertical"
        android:visibility="gone" >

        <view
            android:id="@+id/listViewBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            class="com.roamtouch.gesturekit.rktlauncher.adapters.BackgroundContainer" >

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dip" >
            </ListView>
        </view>
    </LinearLayout>

</RelativeLayout>